# v3-CVision

./: .env.example  .gitignore  README.md
.github/workflows/: ci-backend.yml  ci-frontend.yml  deploy-backend.yml  deploy-frontend.yml
backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: chat.py  employees.py  health.py  lastenheft.py
backend/app/core/: auth.py  config.py  dependencies.py  search_index.py
backend/app/models/: auth.py  employee.py  lastenheft.py
backend/app/services/: candidate_matcher.py  chat_service.py  document_extractor.py  embedding_service.py  employee_service.py  lastenheft_analyzer.py  search_service.py
backend/scripts/: reindex.py
backend/tests/: conftest.py
backend/tests/unit/: test_app.py  test_auth.py  test_candidate_matcher.py  test_chat_service.py  test_document_extractor.py  test_embedding_service.py  test_employee_service.py  test_health.py  test_lastenheft_analyzer.py  test_reindex.py  test_search_service.py
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  server.js  tsconfig.node.json  vitest.config.ts
frontend/src/: App.tsx  i18n.ts  main.tsx
frontend/src/config/: authConfig.ts
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useApi.ts  (+1 more)
frontend/tests/: App.test.tsx  EmployeeDetailPage.test.tsx  ErrorBoundary.test.tsx  LastenheftPage.test.tsx  Layout.test.tsx  NotFoundPage.test.tsx  SearchPage.test.tsx  routing.test.tsx  setup.ts
(+18 files in other folders)
